[package]
name = "slabmalloc"
version = "0.10.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
description = "Simple slab based malloc implementation in rust. Can be used stand-alone or in order to provide the necessary interface to rusts liballoc library. slabmalloc only relies on libcore."
homepage = "https://github.com/gz/rust-slabmalloc"
repository = "https://github.com/gz/rust-slabmalloc"
documentation = "https://docs.rs/slabmalloc"
readme = "README.md"
license = "MIT"
edition = "2018"

keywords = ["os", "malloc", "slab", "alloc", "memory"]

[features]
unstable = []
default = [ "unstable", "cacheline_64", "aarch64_granule_4k" ]
cacheline_32 = []
cacheline_64 = []
cacheline_128 = []
aarch64_granule_4k = []
aarch64_granule_16k = []
aarch64_granule_64k = []

[dependencies]
log = "0.4"

[target.'cfg(unix)'.dev-dependencies]
rand = "0.8"
env_logger = "0.9"
spin = "0.9.0"
